lite-server seems to work, now it's time to set up the page

--- a/dApp/src/index.html
+++ b/dApp/src/index.html
@@ -2,5 +2,8 @@
 <script src="js/web3.min.js"></script>
 <script src="js/truffle-contract.js"></script>
 
-<!-- Our App script -->
+<!-- App script -->
 <script src="js/app.js"></script>
+
+<!-- Rest of the webpage -->
+<input id="clickMe" type="button" value="clickme" onclick="test();" />
