added other buttons and fixed error in app.js

--- a/dApp/src/index.html
+++ b/dApp/src/index.html
@@ -6,4 +6,6 @@
 <script src="js/app.js"></script>
 
 <!-- Rest of the webpage -->
-<input id="clickMe" type="button" value="clickme" onclick="test();" />
+<input id="biddingLength" type="button" value="bidding Length" onclick="App.getBiddingLength();" />
+<input id="auctionLength" type="button" value="Auction Length" onclick="App.getAuctionLength();" />
+<input id="auctioneer" type="button" value="auctioneer" onclick="App.getAuctioneer();" />
