--- a/dApp/src/index.html
+++ b/dApp/src/index.html
@@ -6,6 +6,9 @@
 <script src="js/app.js"></script>
 
 <!-- Rest of the webpage -->
+<input id="bidField" type="text" value="">
+<input id="bidButton" type="button" value="bid!" onclick="App.bid();" />
+<input id="finalizeButton" type="button" value="finalize" onclick="App.finalize();" />
+
 <input id="biddingLength" type="button" value="bidding Length" onclick="App.getBiddingLength();" />
-<input id="auctionLength" type="button" value="Auction Length" onclick="App.getAuctionLength();" />
 <input id="auctioneer" type="button" value="auctioneer" onclick="App.getAuctioneer();" />
