added factory contract, it will be useful for deploying multiple contract. Changed the webpage a bit. I also understood a lot of things regarding web3 and truffle-contract.

--- a/dApp/src/index.html
+++ b/dApp/src/index.html
@@ -6,11 +6,13 @@
 <script src="js/app.js"></script>
 
 <!-- Rest of the webpage -->
+<h1 id="accountId"></h1>
 <div> Seller part </div>
 <input id="deployButton" type="button" value="deploy!" onclick="App.deploy();" />
 <div> Bidder part </div>
 <input id="bidField" type="text" value="">
 <input id="bidButton" type="button" value="bid!" onclick="App.bid();" />
+<input id="waitButton" type="button" value="wait" onclick="App.wait();" />
 <input id="finalizeButton" type="button" value="finalize" onclick="App.finalize();" />
 <input id="biddingLength" type="button" value="bidding Length" onclick="App.getBiddingLength();" />
 <input id="auctioneer" type="button" value="auctioneer" onclick="App.getAuctioneer();" />
