changed a bit the migration procedure, studying web3 and truffle-contract

--- a/dApp/src/index.html
+++ b/dApp/src/index.html
@@ -7,9 +7,12 @@
 
 <!-- Rest of the webpage -->
 <h1 id="accountId"></h1>
-<div> Seller part </div>
+
+<h2> Seller part </h2>
 <input id="deployButton" type="button" value="deploy!" onclick="App.deploy();" />
-<div> Bidder part </div>
+
+<h2> Bidder part </h2>
+<div id="radioButtonList">Auctions list: </div>
 <input id="bidField" type="text" value="">
 <input id="bidButton" type="button" value="bid!" onclick="App.bid();" />
 <input id="waitButton" type="button" value="wait" onclick="App.wait();" />
